# MeetingZone-MZ-

./: .gitattributes  README.md  main.cpp  video.cpp  widget.cpp  widget.h
01_TcpClient_Commented/: 01_TcpClient_Commented.pro  01_TcpClient_Commented.pro.user.e26cc42  main.cpp  widget.cpp  widget.h  widget.ui
CMakeTest/: CMakeLists.txt  main.cpp
Chat/: Makefile  client.cpp  server.cpp
Frontend/mz/: CMakeLists.txt  CMakeLists.txt.user.245e008  CMakeLists.txt.user.3dafd0d  backgroundpicture.cpp  backgroundpicture.h  camerastreamer.cpp  camerastreamer.h  camviewer.cpp  camviewer.h  image.qrc  main.cpp  networkmanager.cpp  networkmanager.h  widget.cpp  widget.h  widget.ui
Frontend/mz/include/: x264_config.h
Frontend/mz/include/ffmpeg/libavutil/: ffversion.h
Frontend/mz/include/libavutil/: ffversion.h
Frontend/mz/include/opencv4/opencv2/: cvconfig.h
Frontend/mz/lib/: libavdevice.so.61  libavdevice.so.61.4.100  libavformat.so.61.9.100  libavutil.so.59  libcharset.la  libcharset.so.1.0.0  libiconv.la  libiconv.so.2.6.1  libopencv_aruco.so.4.10.0  libopencv_bgsegm.so.4.10.0  libopencv_bioinspired.so.4.10.0  libopencv_datasets.so.410  libopencv_dnn_objdetect.so.4.10.0  libopencv_dnn_superres.so.4.10.0  libopencv_dpm.so.410  libopencv_face.so.410  libopencv_features2d.so.4.10.0  libopencv_flann.so.410  libopencv_freetype.so.410  libopencv_hfs.so.410  libopencv_highgui.so.410  libopencv_imgcodecs.so.410  libopencv_intensity_transform.so.410  libopencv_line_descriptor.so.4.10.0  libopencv_mcc.so.4.10.0  libopencv_ml.so.410  libopencv_objdetect.so.410  libopencv_optflow.so.410  libopencv_phase_unwrapping.so.4.10.0  libopencv_photo.so.410  libopencv_plot.so.410  libopencv_quality.so.410  libopencv_rapid.so.4.10.0  libopencv_reg.so.4.10.0  libopencv_rgbd.so.4.10.0  libopencv_shape.so.410  libopencv_stereo.so.4.10.0  libopencv_structured_light.so.410  libopencv_superres.so.410  libopencv_surface_matching.so.4.10.0  (+6 more)
Frontend/mz/libiconv-1.16/: config.status  libtool
Frontend/mz/libiconv-1.16/lib/: libcharset.so.1.0.0
Frontend/mz/libiconv-1.16/lib/.libs/: libiconv.so.2.6.1
Frontend/mz/libiconv-1.16/libcharset/: config.status  libtool
Frontend/mz/libiconv-1.16/po/: Makefile  Makefile.in
Frontend/mz/libiconv-1.16/src/: Makefile  iconv  iconv_no_i18n
Frontend/mz/libiconv-1.16/src/.libs/: iconv_no_i18n
Frontend/mz/libiconv-1.16/srclib/: Makefile
Frontend/mz/opencv-install/include/opencv4/opencv2/: cvconfig.h
Frontend/mz/opencv-install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Frontend/mz/opencv-install/lib/python3.11/dist-packages/cv2/: __init__.pyi
Frontend/mz/opencv-install/lib/python3.11/dist-packages/cv2/typing/: __init__.py
RTSP/: Makefile  client.cpp  networkmanager.cpp  networkmanager.h
document/: ActivityDiagram.drawio  제목 없는 다이어그램.drawio
server/: Makefile  main.cpp  mediamtx.yml  networkmanager.cpp  networkmanager.h  server  server.cpp  server.h  video.cpp
server/include/libavutil/: ffversion.h
server/lib/: libavformat.so.61.9.100  libavutil.so.59  libswscale.so.8.12.100
server/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
test/: 01_TcpClient_Commented.pro  readme.txt  server  server_test.cpp  widget.cpp
